--- a/Views/Risks/Index.cshtml
+++ b/Views/Risks/Index.cshtml
@@ -8,9 +8,15 @@
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h2><i class="fas fa-shield-alt me-2"></i>Risk Register</h2>
         <div>
-            <a asp-action="Create" class="btn btn-success me-2">
-                <i class="fas fa-plus me-2"></i>Add Risk
-            </a>
+            @if (User.IsInRole("GRCUser") || User.IsInRole("Admin"))
+            {
+                <a asp-action="Upload" class="btn btn-info me-2">
+                    <i class="fas fa-upload me-2"></i>Upload Excel
+                </a>
+                <a asp-action="Create" class="btn btn-success me-2">
+                    <i class="fas fa-plus me-2"></i>Add Risk
+                </a>
+            }
             <a asp-action="ExportToExcel" class="btn btn-outline-success">
                 <i class="fas fa-file-excel me-2"></i>Export to Excel
             </a>
@@ -828,11 +834,11 @@
     /* Likelihood Axis */
     .likelihood-axis {
         display: flex;
-        justify-content: space-between;
-        width: 100%;
-        max-width: 328px;
+        justify-content: flex-start;
+        width: 328px;
         margin-top: 10px;
-        padding: 0 2px;
+        margin-left: 125px;
+        gap: 2px;
     }
 
     .likelihood-level {
