Hide Assessment Templates menu button from all users

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -97,12 +97,14 @@
                                     }
                                     <li><hr class="dropdown-divider"></li>
                                     <li><h6 class="dropdown-header"><i class="fas fa-cog me-1"></i>Tools & Templates</h6></li>
+                                    @* Assessment Templates menu item hidden per user request
                                     <li>
                                         <a class="dropdown-item" asp-controller="AttackChain" asp-action="Index">
                                             <i class="fas fa-file-alt me-1"></i>Assessment Templates
                                             <small class="text-muted d-block">Risk scenario templates</small>
                                         </a>
                                     </li>
+                                    *@
                                     <li><hr class="dropdown-divider"></li>
                                     <li><h6 class="dropdown-header"><i class="fas fa-handshake me-1"></i>Risk Acceptance</h6></li>
                                     <li>
